fixed preview alignment

--- a/files/css/dashboard.css
+++ b/files/css/dashboard.css
@@ -130,6 +130,7 @@ h1, h2, h3, h4{
 .previewImage{
   margin: auto;
   text-align: center;
+  min-height: 15em;
 }
 
 .previewMap{
